# rcrd-graphics

./: .gitignore  CMakeLists.txt  README.md  build.sh  notes.txt  premake5.lua
cmake/: FindGLFW3.cmake  FindGLM.cmake
deprecated/ricardo-graphics/ricardo-graphics/: CMakeLists.txt  GraphicsSystem.cpp  GraphicsSystem.h  Object.h  fragShader.txt  ricardo-graphics.vcxproj.filters  vertShader.txt
doc/: tdd.tex
project-files/: rcrd-graphics.sln  rcrd-graphics.vcxproj  rcrd-graphics.vcxproj.filters  ricardo-graphics.sln  ricardo-graphics.vcxproj  ricardo-graphics.vcxproj.filters
rcrd-graphics/include/: Batch.h  Camera.h  GraphicsSystem.h  InputSystem.h  Light.h  Loader.h  Model.h  Object.h  Shader.h  Vertex.h  core.h  debug.h
rcrd-graphics/src/: Batch.cpp  Camera.cpp  GraphicsSystem.cpp  InputSystem.cpp  Light.cpp  Model.cpp  Object.cpp  Shader.cpp  main.cpp
resources/: ball.mtl  cube2.mtl  cubesmooth.mtl  cylinder.mtl  firehydrant.mtl  huracan.mtl  shelby.mtl  teekanne001.mtl  tree.mtl
ricardo-graphics/: ricardo-graphics.sln
ricardo-graphics/Deprecated/: main.cpp  matrix_txt.cpp  matrix_txt.h
ricardo-graphics/include/: Batch.h  GraphicsSystem.h  Light.h  Loader.h  Material.h  Model.h  Object.h  Shader.h  Vertex.h  core.h
shaders/: depthFrag.glsl  depthGeom.glsl  depthVert.glsl  fragShader.glsl  pointLightShaderF.glsl  pointLightShaderV.glsl  vertShader.glsl
src/: Batch.cpp  Batch.h  GraphicsSystem.cpp  GraphicsSystem.h  Light.h  Loader.cpp  Loader.h  Material.cpp  Material.h  Model.cpp  Model.h  Object.cpp  Object.h  Vertex.cpp  Vertex.h  main.cpp
(+32 files in other folders)
